2018-11-30  Truitt Savell  <tsavell@apple.com>

        Rebaseline test after https://trac.webkit.org/changeset/238725/webkit
        https://bugs.webkit.org/show_bug.cgi?id=192201

        Unreviewed Test Gardening.

        * platform/ios/compositing/scrolling/overflow-scrolling-layers-are-self-painting-expected.txt: Added.

2018-11-30  Justin Fan  <justin_fan@apple.com>

        [WebGPU] WebGPUQueue::submit and WebGPURenderingContext::present() implementation
        https://bugs.webkit.org/show_bug.cgi?id=192254

        Reviewed by Dean Jackson.

        Update webgpu-basics to render an image into canvas. Also added ref-test that draws 
        a green square onto a canvas using WebGPU; reference uses 2D canvas.

        * webgpu/js/basic-webgpu-functions.js:
        (render):
        * webgpu/simple-triangle-strip-expected.html: Added.
        * webgpu/simple-triangle-strip.html: Added.
        * webgpu/webgpu-basics.html:

2018-11-30  Zalan Bujtas  <zalan@apple.com>

        Can’t use RalphLauren.com on iPad because hover menus don’t stay up
        https://bugs.webkit.org/show_bug.cgi?id=192236
        <rdar://problem/45792118>

        Reviewed by Geoffrey Garen.

        * fast/events/touch/ios/hover-when-style-change-is-async-expected.txt: Added.
        * fast/events/touch/ios/hover-when-style-change-is-async.html: Added.

2018-11-30  Ryosuke Niwa  <rniwa@webkit.org>

        ShadowRoot should have styleSheets property
        https://bugs.webkit.org/show_bug.cgi?id=191311
        <rdar://problem/46333290>

        Reviewed by Antti Koivisto.

        Added a regression test for testing that the JS wrapper of a StyleSheetList does not get collected
        as long as its shadow root is alive.

        * fast/shadow-dom/shadowroot-stylesheets-wrapper-gc-expected.txt: Added.
        * fast/shadow-dom/shadowroot-stylesheets-wrapper-gc.html: Added.

2018-11-30  Wenson Hsieh  <wenson_hsieh@apple.com>
