@@ -1,0 +1,11 @@
+<?php
+header("Access-Control-Allow-Origin: *");
+
+$name = 'loading-subresources.css';
+$fp = fopen($name, 'rb');
+header("Content-Type: text/css");
+header("Content-Length: " . filesize($name));
+
+fpassthru($fp);
+exit;
+?>
